...
            "state" : "translated",
            "value" : "添加电视指南源并设置指南刷新频率，独立于播放列表内容。"
          }
        }
      }
    },
    "Add Playlist" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Playlist hinzufügen"
          }
...
            "state" : "translated",
            "value" : "去隔行视频"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Löschen"
          }
...
            "state" : "translated",
            "value" : "隐藏频道以将其从此类别中移除，或拖动以重新排列。“重置”可恢复服务商的顺序并显示全部。"
          }
        }
      }
    },
    "Home" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start"
          }
...
            "state" : "translated",
            "value" : "直播缓冲"
          }
        }
      }
    },
    "Live TV" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Live-TV"
          }
...
            "state" : "translated",
            "value" : "电影类别"
          }
        }
      }
    },
    "Movies" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filme"
          }
...
            "state" : "translated",
            "value" : "选择一个类别"
          }
        }
      }
    },
    "Series" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Serien"
          }
...
            "state" : "translated",
            "value" : "服务器"
          }
        }
      }
    },
    "Server Connection" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Serververbindung"
          }
...
